<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/mainBackground"
    android:weightSum="1">

    <CheckBox
        android:id="@+id/chk16Gb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chk_16Gb"
        android:textSize="30sp"/>

    <CheckBox
        android:id="@+id/chk32Gb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chk_32Gb"
        android:textSize="30sp"/>

    <CheckBox
        android:id="@+id/chk64Gb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chk_64Gb"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/btnDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_display"
        android:layout_gravity="end" />

</LinearLayout>