<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/mainBackground"
    android:weightSum="1">

    <CheckBox
        android:id="@+id/chkWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chk_white"
        android:textSize="50sp"/>

    <CheckBox
        android:id="@+id/chkBlack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chk_black"
        android:textSize="50sp"/>


    <Button
        android:id="@+id/btnDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_display"
        android:layout_gravity="end" />

</LinearLayout>