<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:adjustViewBounds="true"
    android:divider="@drawable/separator"
    android:dividerPadding="2dp"
    android:orientation="horizontal"
    android:showDividers="middle" >

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="?android:attr/buttonBarButtonStyle"
        android:text="@string/model_button"
        android:layout_weight="1"
        android:id="@+id/model_button"
        android:textColor="@color/colorPrimary"
        android:padding="0dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="?android:attr/buttonBarButtonStyle"
        android:text="@string/memory_button"
        android:layout_weight="1"
        android:id="@+id/memory_button"
        android:textColor="@color/colorPrimary"
        android:padding="0dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="?android:attr/buttonBarButtonStyle"
        android:text="@string/color_button"
        android:layout_weight="1"
        android:id="@+id/color_button"
        android:textColor="@color/colorPrimary"
        android:padding="0dp" />

    <!--<Button-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--style="?android:attr/buttonBarButtonStyle"-->
        <!--android:text="@string/condition_button"-->
        <!--android:layout_weight="1"-->
        <!--android:id="@+id/condition_button"-->
        <!--android:textColor="@color/colorPrimary"-->
        <!--android:clickable="true"-->
        <!--android:padding="0dp" />-->

</LinearLayout>